Still Trying to Fix Git not working

--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>WITComp2000-lab2/lab2/boatGraph.m</name>
+			<name>lab2/boatGraph.m</name>
 			<type>1</type>
 			<location>C:/Users/Reill/MATLAB Drive/boatGraph.m</location>
 		</link>
